<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Adm Movil</string>
    <string name="nombre_sistema">ADM MOVIL</string>
    <string name="action_settings">Settings</string>
    <string name="menu_agregar">Agregar</string>
    <string name="menu_guardar">Guardar</string>
    <string name="menu_modificar">Modificar</string>
    <string name="menu_buscar">Buscar</string>
    <string name="menu_activar_para_envio">Activar para envío</string>
    <string name="menu_eliminar">Eliminar</string>
    <string name="menu_imprimir">Imprimir</string>
    <string name="lbl_usuario">Usuario</string>
    <string name="lbl_clave">Clave</string>
    <string name="txt_auxiliar_usuario">Ingrese su usuario</string>
    <string name="txt_auxiliar_clave">Ingrese su clave</string>
    <string name="btn_ingreso">INGRESO</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_menu_principal">MainMenuPrincipal</string>
    <string name="btn_cerrar_sesion">Cerrar Sesión</string>
    <string name="title_activity_main_menu_clientes">MainMenuClientes</string>
    <string name="btn_menu_cliente_nuevo">Cliente Nuevo</string>
    <string name="btn_menu_cliente_visualizar">Ver Clientes</string>
    <string name="btn_menu_pedido">Iniciar Pedido</string>
    <string name="title_activity_main_creacion_clientes">MainCreacionClientes</string>
    <string name="lbl_nombre_cliente">Nombre</string>
    <string name="lbl_negocio_cliente">Negocio</string>
    <string name="lbl_direccion_cliente">Dirección</string>
    <string name="lbl_tipo_negocio_cliente">Tipo de Negocio</string>
    <string name="lbl_tipo_cliente">Tipo de Cliente</string>
    <string name="lbl_grupo_descuento">Grupo de Descuento</string>
    <string name="lbl_frecuencia_visita">Frecuencia de Visita</string>
    <string name="lbl_ruta">Ruta</string>
    <string name="lbl_tipo_identificacion_cliente">Tipo de Identificación</string>
    <string name="lbl_numero_identificacion_cliente">Número de identificación</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_nombre_impresora">Impresora</string>
    <string name="txt_auxiliar_nombre">Ingrese un nombre</string>
    <string name="txt_auxiliar_negocio">Ingrese el nombre del negocio</string>
    <string name="txt_auxiliar_direccion">Ingrese la dirección del cliente</string>
    <string name="txt_auxiliar_numero_identificacion">Ingrese el número de identificación</string>
    <string name="txt_auxiliar_email">Ingrese una dirección de email</string>
    <string name="txt_auxiliar_tipo_negocio">Seleccione un tipo de negocio</string>
    <string name="txt_auxiliar_tipo_cliente">Seleccione un tipo de cliente</string>
    <string name="txt_auxiliar_grupo_descuento">Seleccione un grupo de descuento</string>
    <string name="txt_auxiliar_frecuencia_visita">Seleccione una frecuencia de visita</string>
    <string name="txt_auxiliar_ruta">Seleccione una ruta</string>
    <string name="txt_auxiliar_ipws">Ingrese la ip del ws</string>
    <string name="txt_auxiliar_user_user">Ingrese su usuario de ingreso</string>
    <string name="txt_auxiliar_clave_user">Ingrese su clave de ingreso</string>
    <string name="txt_auxiliar_edita_precio">Edita Precio</string>
    <string name="txt_nombre_impresora">Ingrese el nombre de la impresora</string>
    <string name="rbt_cedula">Cédula</string>
    <string name="rbt_ruc">RUC</string>
    <string name="rbt_consumidor_final">Consumidor Final</string>
    <string name="btn_cliente_creacion">Grabar</string>
    <string name="btn_busqueda_codigo">Código</string>
    <string name="btn_busqueda_nombre">Nombre</string>
    <string name="title_activity_prueba_list_view">PruebaListView</string>
    <string name="img_imagen_toast">Éxito</string>
    <string name="img_imagen_lis_view_menu">Imagen Menú Principal</string>
    <string name="title_activity_main_pedidos">MainPedidos</string>
    <string name="lbl_cliente">Cliente:</string>
    <string name="lbl_seleccione_cliente">Seleccione un Cliente</string>
    <string name="btnBuscar">Buscar</string>
    <string name="lbl_item">Item:</string>
    <string name="lbl_seleccione_item">Seleccione un item</string>
    <string name="title_activity_main_ver_clientes">MainVerClientes</string>
    <string name="prueba_titulo">titulo</string>
    <string name="prueba_subtitulo">subtitulo</string>
    <string name="title_activity_main_ver_item">MainVerItem</string>
    <string name="busqueda">Búsqueda</string>
    <string name="lbl_subtotal">Sub:</string>
    <string name="lbl_descuento">Des:</string>
    <string name="lbl_iva">Iva:</string>
    <string name="lbl_neto">Neto:</string>
    <string name="lbl_valorsubtotal">0.00</string>
    <string name="lbl_valordescuento">0.00</string>
    <string name="lbl_valoriva">0.00</string>
    <string name="lbl_valorneto">0.00</string>
    <string name="lbl_cajas">Caj</string>
    <string name="lbl_unidades">Uds</string>
    <string name="lbl_pordes">% dscto</string>
    <string name="title_activity_main_sincronizacion">MainSincronizacion</string>
    <string name="btn_agregar_pedido">Agregar</string>
    <string name="btn_grabar_pedido">Grabar</string>
    <string name="btn_descripcion_buscar">Buscar</string>
    <string name="btn_descripcion_calendario">Muestra calendario de fecha</string>
    <string name="btn_agregar">Agregar</string>
    <string name="lbl_buscarpor">Buscar por:</string>
    <string name="lbl_buscarporCliente">Busca por:</string>
    <string name="lblFecha">Fecha</string>
    <string name="menu_observacion">Observación</string>
    <string name="menu_verpedidos">Ver pedidos</string>
    <string name="menu_cerrar_sesion">Cerrar Sesión</string>
    <string name="title_activity_main_ver_pedidos">MainVerPedidos</string>
    <string name="title_activity_main_menu_pedido">MainMenuPedido</string>
    <string name="title_activity_main_ver_detalles_pedidos">MainVerDetallesPedidos</string>
    <string name="title_activity_main_ver_datos_clientes">MainVerDatosClientes</string>
    <string name="title_activity_main_parametros">MainParametros</string>
    <string name="title_activity_main_geolocalizacion">MainGeolocalizacion</string>
    <string name="ip_ws">IP Web Services</string>
    <string name="user_user">Usuario</string>
    <string name="clave_user">Clave</string>
    <string name="title_activity_main_carga_datos">MainCargaDatos</string>

    <string name="title_activity_main_ver_pedidos_enviados">MainVerPedidosEnviados</string>
    <string name="title_activity_main_cartera_clientes">MainCarteraClientes</string>
    <string name="title_activity_main_ver_cartera">MainVerCartera</string>
    <string name="title_activity_main_edicion_pedidos">MainEdicionPedidos</string>
    <string name="title_activity_main_ver_item_edicion_ped">MainVerItemEdicionPed</string>
    <string name="title_activity_main_informes_stock">MainInformesStock</string>
    <string name="title_activity_main_prueba_seleccion">MainPruebaSeleccion</string>
    <string name="lbl_credito">Dias de Credito</string>
    <string name="txt_auxiliar_credito">Seleccione Dia</string>

    <string name="txtviewlatitud">latitud</string>
    <string name="txtviewlongitud">longitud</string>
    <string name="toggleButton">parar_actualizaciones</string>
    <string name="btn_busqueda_cedula">Cédula</string>



    <string name="txt_auxiliar_ipwsb">IP Web Service Birobid</string>

    <string name="txt_auxiliar_api_ubicacion">Api ubicacion Birobid</string>
    <string name="title_activity_main_pagos">MainPagos</string>
    <string name="title_activity_main_registra_pagos">MainRegistraPagos</string>
    <string name="title_activity_main_ver_clientes_rp">MainVerClientesRP</string>
    <string name="title_activity_main_ver_clientes_geolocalizacion">MainVerClientesGeolocalizacion</string>
    <string name="title_activity_main_ver_deudas">MainVerDeudas</string>
    <string name="title_activity_main_ver_forma_pagos">MainVerFormasPago</string>
    <string name="title_activity_main_ver_bancos">MainBancos</string>
    <string name="title_activity_main_ver_pagos_enviados">MainVerPagos</string>
    <string name="lbl_telefono_cliente">Teléfono</string>
    <string name="txt_auxiliar_cliente">Ingrese el teléfono del cliente</string>
    <string name="lbl_referencia">Referencia</string>
    <string name="txt_auxiliar_referencia">Ingrese referencia del cliente</string>
    <string name="lbl_zona">Zona</string>
    <string name="txt_auxiliar_zona">Ingrese zona del cliente</string>
    <string name="lbl_parroquia">Parroquias</string>
    <string name="lbl_txt_parroquia">Seleccione una Parroquia</string>
    <string name="lbl_observa">Observacion</string>
    <string name="lbl_observa_txt">Ingrese una Observacion</string>


</resources>
