<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.birobid.admmovil.MainVerPedidosEnviados" >
	
	<item
        android:id="@+id/accion_buscar"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/menu_buscar"
        android:icon="@android:drawable/ic_menu_search" />
	
	<item
        android:id="@+id/accion_activar_para_envio"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/menu_activar_para_envio"
        android:icon="@android:drawable/ic_menu_save" />
    
    <item
        android:id="@+id/accion_eliminar"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/menu_eliminar" />
	
	
	<item
        android:id="@+id/cerrar_sesion"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_cerrar_sesion"/>
</menu>
