<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
	android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.birobidsa.admmovil.com.MainVerClientesRP">

    <LinearLayout
        android:id="@+id/llBusqueda"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:visibility="gone">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_buscarpor"/>
        <RadioGroup
    	    android:id="@+id/rgrBuscarPor"
        	android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
    		android:orientation="horizontal"
    		android:layout_marginTop="-8dp"
    		android:layout_marginLeft="5dp"
    		android:layout_marginStart="5dp" >
    		<RadioButton
	    	    android:id="@+id/rbtCodigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
    		    android:text="@string/btn_busqueda_codigo"
    		    android:textSize="13sp"
    		    android:checked="false" />
	    	<RadioButton
    		    android:id="@+id/rbtNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
    		    android:text="@string/btn_busqueda_nombre"
    	    	android:textSize="13sp"
    	    	android:checked="true"
    	    	/>
			<RadioButton
				android:id="@+id/rbtCedula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
				android:text="@string/btn_busqueda_cedula"
				android:textSize="13sp"
				android:checked="false"
				android:layout_marginLeft="15dp"
				android:layout_marginStart="15dp" />
	    </RadioGroup>
    </LinearLayout>
    
    <EditText
        android:id="@+id/txtBusquedaClientes"
        android:hint="@string/busqueda"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:visibility="gone" />
    
	<ListView
	    android:id="@+id/lvClientes"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/txtBusquedaClientes" />
</RelativeLayout>