<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.birobidsa.admmovil.com.MainEdicionPedidos" >

    <item
        android:id="@+id/accion_agregar"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/menu_agregar"
        android:icon="@android:drawable/ic_menu_add" />
    
    <item
        android:id="@+id/accion_modificar"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/menu_modificar"
        android:icon="@android:drawable/ic_menu_edit" />
    
    <item
        android:id="@+id/accion_observacion"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/menu_observacion" />
    
    <!-- 
    <item
        android:id="@+id/accion_verpedidos"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/menu_verpedidos" />
    -->
    <!-- 
	<item
        android:id="@+id/cerrar_sesion"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_cerrar_sesion"/>
     -->
</menu>